refactor: update table module references and enhance hotwidget integration

--- a/inst/htmlwidgets/hotwidget.yaml
+++ b/inst/htmlwidgets/hotwidget.yaml
@@ -1,4 +1,20 @@
 dependencies:
+ - name: dompurify
+   version: 3.0.6
+   src: htmlwidgets/libs/dompurify
+   script: purify.min.js
+ - name: moment
+   version: 2.29.4
+   src: htmlwidgets/libs/moment
+   script: moment.min.js
+ - name: pikaday
+   version: 1.8.0
+   src: htmlwidgets/libs/pikaday
+   script: pikaday.min.js
+ - name: numbro
+   version: 2.4.0
+   src: htmlwidgets/libs/numbro
+   script: numbro.min.js
  - name: handsontable
    version: 16.1.1
    src: htmlwidgets/libs/handsontable
