run devtools::document()

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,6 +8,7 @@ export(mod_table_server)
 export(mod_table_ui)
 export(renderHotwidget)
 export(run_app)
+export(summary_block)
 import(bslib)
 import(htmlwidgets)
 import(shiny)
